# statistical-testdata-exporter

./: Cargo.toml  Dockerfile  LICENSE  README.adoc  compose.yml
src/: args_cmd.rs  binomial.rs  chisquared.rs  gauss.rs  main.rs  prom_exporter.rs  uniform.rs
