[package]
name = "statistical-testdata-exporter"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
prometheus = "0.13.4"
rand = "0.9.0"
rand_distr = "0.5.1"
